--- a/.github/workflows/convert-rule.yml
+++ b/.github/workflows/convert-rule.yml
@@ -6,7 +6,7 @@ on:
       - 'Filters/AWAvenue-Ads-Rule-Clash.yaml'  # 当该文件发生变化时触发
   workflow_dispatch:  # 也可以手动触发工作流
   schedule:
-    - cron: '0 0 * * *'  # 每天00:00 UTC触发工作流
+    - cron: '0 0 * * 0'  # 每周日00:00 UTC触发工作流
 
 jobs:
   convert-rule:
